...

    var title: String {
        switch self {
        case .chords: return "Chords"
        case .scales: return "Scales"
        case .vivace: return "Vivace"
        case .ask: return "Ask"
        }
    }

    var systemImage: String {
        switch self {
        case .chords: return "music.note.list"
...
